--- a/nanoblogger/default/styles/nb_rusted.css
+++ b/nanoblogger/default/styles/nb_rusted.css
@@ -20,7 +20,7 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	text-align: center;
-	font: 12px/1.5 verdana, arial, helvetica, sans-serif;
+	font: 12px/1.5 Verdana, Arial, Helvetica, sans-serif;
 	}
 
 a 		{ color: #921d00; text-decoration: none; }
@@ -42,7 +42,7 @@ h2 {
 	margin-bottom: 1.5em;
 	padding: 0;
 	text-align: center;
-	font-family: vedana, arial, helvetica, sans-serif;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: medium;
 	font-weight: bold;
 	}
@@ -256,7 +256,7 @@ html>body #footer {
 	padding: 2px;
 	text-align: right;
 	letter-spacing: 0.2em;
-	font-family: verdana, arial, helvetica, sans-serif;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: x-small; /* for IE 5.5 */
 	f\ont-size: small; /* feed to compliant browsers */
 	font-weight: normal;
@@ -390,7 +390,7 @@ img.right {
 
 /* IE hack to fix font size in tables */
 * html table {
-	font: 1em verdana, arial, helvetica, serif; /* IE5 */
+	font: 1em "Times New Roman", Times, serif; /* IE5 */
 	}
 
 /* --- extras --- */
